force-app/main/default/objects/WebshopBrand__c/fields/AssortmentExtensionEnabled__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtensionEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1669</description>
    <label>Assortment Extension Enabled?</label>
    <type>Checkbox</type>
</CustomField>