force-app/main/default/objects/WebshopBrand__c/fields/BrandLogo__c.field-meta.xml
<CustomField>
    <fullName>BrandLogo__c</fullName>
    <label>Brand Logo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>