force-app/main/default/objects/WebshopBrand__c/fields/BrandText__c.field-meta.xml
<CustomField>
    <fullName>BrandText__c</fullName>
    <label>Brand Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>