force-app/main/default/objects/WebshopBrand__c/fields/IsMachineBrand__c.field-meta.xml
<CustomField>
    <fullName>IsMachineBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Machine Brand</label>
    <type>Checkbox</type>
</CustomField>