force-app/main/default/objects/WebshopBrand__c/fields/MaximalDiscount1__c.field-meta.xml
<CustomField>
    <fullName>MaximalDiscount1__c</fullName>
    <label>Maximal Discount 1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>