force-app/main/default/objects/WebshopBrand__c/fields/MaximalDiscount2__c.field-meta.xml
<CustomField>
    <fullName>MaximalDiscount2__c</fullName>
    <label>Maximal Discount 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>