force-app/main/default/objects/WebshopBrand__c/fields/WebshopFeaturedAd__c.field-meta.xml
<CustomField>
    <fullName>WebshopFeaturedAd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webshop Featured Ad</label>
    <referenceTo>WebshopFeaturedAd__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>