force-app/main/default/objects/WebshopBrand__c/fields/WebshopStaticSlider__c.field-meta.xml
<CustomField>
    <fullName>WebshopStaticSlider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-1101</description>
    <label>Static Slider</label>
    <referenceTo>WebshopStaticSlider__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>